--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,16 @@
 body,
 html,
-#root {
+#root,
+main {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
+  position: relative;
+}
+
+main {
+  overflow: hidden;
 }
 
 $textTagList: 'h1', 'h2', 'h3', 'h4', 'p';
