--- a/src/components/LeftMenu/LeftMenu.scss
+++ b/src/components/LeftMenu/LeftMenu.scss
@@ -1,7 +1,10 @@
 .left-menu {
   background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   
-  ul {
+  .left-menu-nav {
     list-style: none;
     padding: 0;
     margin: 0;
