refactor bunch of things

--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -4,5 +4,6 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;  
+  justify-content: space-around;
+  min-height: 100vh;  
 }
