creates separate types files

--- a/src/components/UserWidget/UserWidget.scss
+++ b/src/components/UserWidget/UserWidget.scss
@@ -10,6 +10,11 @@
     padding: 20px;
   }
 
+  .user-widget-image {
+    width: 50px;
+    border-radius: 50%;
+  }
+
   .user-widget-logout {
     cursor: pointer;
 
